example/lib/src/arbs/errors/app_kk.arb
{
  "@@locale": "kk",
  "@@author": "example@gmail.com",
  "@@last_modified": "2026-07-14T13:18:25.440497Z",
  "@@comment": "Generated from Google Sheets",
  "error": "Қате орын алды",
  "@error": {
    "description": "Ошибка"
  },
  "unexpectedError": "Күтпеген қате орын алды",
  "@unexpectedError": {
    "description": "Произошла какая то ошибка"
  },
  "bugReportSentText": "Баг туралы есеп сәтті жіберілді.",
  "@bugReportSentText": {
    "description": "Сообщение об успешной отправке баг репорта"
  }
}